--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -73,10 +73,19 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Здраствуйте Владислав. Вам 19 лет!\n",
+      "Добро пожаловать в C#\n"
+     ]
+    }
+   ],
    "source": [
-    "string Name = \"Игорь\";\n",
-    "int Age = 45;\n",
+    "string Name = \"Владислав\";\n",
+    "int Age = 19;\n",
     "Console.WriteLine($\"Здраствуйте {Name}. Вам {Age} лет!\");\n",
     "Console.WriteLine(\"Добро пожаловать в C#\");"
    ]
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +144,200 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Минимальное число в массиве: 1\n",
+      "Максимальное число в массиве: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] numbers = { 5, 8, 1, 3, 9, 6, 7, 2 };\n",
+    "\n",
+    "// 1. Найти минимальное и максимальное значения в массиве.\n",
+    "\n",
+    "// Поиск наименьшего числа в массиве\n",
+    "int min = numbers[0];\n",
+    "\n",
+    "foreach (int num in numbers)\n",
+    "{\n",
+    "    if (num < min)\n",
+    "    {\n",
+    "        min = num;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Поиск наибольшего числа в массиве\n",
+    "int max = numbers[0];\n",
+    "\n",
+    "foreach (int num in numbers)\n",
+    "{\n",
+    "    if (num > max)\n",
+    "    {\n",
+    "        max = num;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Console.WriteLine($\"Минимальное число в массиве: {min}\");\n",
+    "Console.WriteLine($\"Максимальное число в массиве: {max}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма всех элементов массива: 41\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 2. Найти сумму всех элементов массива.\n",
+    "\n",
+    "int sum = 0;\n",
+    "\n",
+    "foreach (int num in numbers)\n",
+    "{\n",
+    "    sum += num;\n",
+    "}\n",
+    "\n",
+    "Console.WriteLine($\"Сумма всех элементов массива: {sum}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Среднее арифметическое элементов массива: 5,125\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 3. Найти среднее арифметическое всех элементов массива.\n",
+    "\n",
+    "// Сумма всех элементов нам известна из предыдущего задания. Остается найти пол-во элементов массива.\n",
+    "int count = 0;\n",
+    "foreach (int num in numbers)\n",
+    "{\n",
+    "    count++;\n",
+    "}\n",
+    "\n",
+    "// Разделим сумму элементов на их количество.\n",
+    "double avg = (sum * 1.0) / count; // Умножаем на 1.0 для того, чтобы получить вещественный результат.\n",
+    "\n",
+    "Console.WriteLine($\"Среднее арифметическое элементов массива: {avg}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "// 4. Отсортировать массив в порядке возрастания.\n",
+    "\n",
+    "int n = numbers.Length;\n",
+    "\n",
+    "// Сортиировка пузырьком.\n",
+    "for (int i = 0; i < n - 1; i++)\n",
+    "{\n",
+    "    for (int j = 0; j < n - i - 1; j++)\n",
+    "    {\n",
+    "        if (numbers[j] > numbers[j + 1])\n",
+    "        {\n",
+    "            // Обмен значениями.\n",
+    "            int temp = numbers[j];\n",
+    "            numbers[j] = numbers[j + 1];\n",
+    "            numbers[j + 1] = temp;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Вывод отсортированных элементов массива.\n",
+    "foreach (int item in numbers)\n",
+    "    {\n",
+    "        Console.Write(item + \" \");\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Числа 21 в массиве нет.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 5. Проверить, содержит ли в массиве определенное число.\n",
+    "\n",
+    "int number = 21;\n",
+    "bool flag = false;\n",
+    "\n",
+    "foreach (int num in numbers)\n",
+    "{\n",
+    "    if (num == number)\n",
+    "    {\n",
+    "        flag = true;\n",
+    "        break;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "if (flag == true)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Массив содержит число {number}.\");\n",
+    "    }\n",
+    "else\n",
+    "    {\n",
+    "        Console.WriteLine($\"Числа {number} в массиве нет.\");\n",
+    "    }"
+   ]
   },
   {
    "attachments": {
@@ -160,6 +361,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
