--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -188,7 +188,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
