--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -63,7 +63,16 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "// Создание класса\n",
+    "class Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// Основная программа\n",
+    "Vehicle Car = new Vehicle(); // Создание объекта"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +98,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal \n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal Dog = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -146,8 +162,39 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запустить двигатель...\n",
+      "Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color; // Приватное поле\n",
+    "\n",
+    "    public string Color // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine() // Публичный метод\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Основная программа\n",
+    "Vehicle Car = new Vehicle(); // Создание объекта\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -171,8 +218,39 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Пробудиться ото сна...\n",
+      "Черно-коричневый\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string skin; // Приватное поле\n",
+    "\n",
+    "    public string Skin // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return skin; }\n",
+    "        set { skin = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void WakeUp() // Публичный метод\n",
+    "    {\n",
+    "        Console.WriteLine(\"Пробудиться ото сна...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Основная программа\n",
+    "Animal Dog = new Animal(); // Создание объекта\n",
+    "Dog.Skin = \"Черно-коричневый\";\n",
+    "Dog.WakeUp();\n",
+    "Console.WriteLine(Dog.Skin);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -238,8 +316,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Красный\n",
+      "Поехали...\n",
+      "Синий\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color; // Приватное поле\n",
+    "\n",
+    "    public string Color // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle(); // Создание объекта myVehicle\n",
+    "Car myCar = new Car(); // Создание объекта myCar\n",
+    "\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -263,8 +383,51 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Черно-коричневый\n",
+      "Побежали...\n",
+      "Черно-белый\n",
+      "Побежали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string skin; // Приватное поле\n",
+    "\n",
+    "    public string Skin // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return skin; }\n",
+    "        set { skin = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void Run() // Публичный метод\n",
+    "    {\n",
+    "        Console.WriteLine(\"Побежали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal(); // Создание объекта myAnimal\n",
+    "Dog myDog = new Dog(); // Создание объекта myDog\n",
+    "\n",
+    "myDog.Skin = \"Черно-коричневый\";\n",
+    "Console.WriteLine(myDog.Skin);\n",
+    "myDog.Run();\n",
+    "\n",
+    "myDog.Skin = \"Черно-белый\";\n",
+    "Console.WriteLine(myDog.Skin);\n",
+    "myDog.Run();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -322,8 +485,41 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт двигается\n",
+      "Автомобиль двигается\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        //base.Move(); // Вызов метода базового класса\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle(); // Создание объекта myVehicle\n",
+    "Car myCar = new Car(); // Создание объекта myCar\n",
+    "\n",
+    "\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -347,8 +543,41 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное бежит\n",
+      "Собака бежит\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public virtual void Run()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное бежит\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void Run()\n",
+    "    {\n",
+    "        //base.Run(); // Вызов метода базового класса\n",
+    "        Console.WriteLine(\"Собака бежит\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal(); // Создание объекта myAnimal\n",
+    "Dog myDog = new Dog(); // Создание объекта myDog\n",
+    "\n",
+    "\n",
+    "myAnimal.Run();\n",
+    "myDog.Run();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -406,8 +635,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Батарея заряжена...\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ElectricCar myElectricCar = new ElectricCar(); // Создание объекта myElectricCar\n",
+    "\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -431,8 +692,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "След взят...\n",
+      "Побежали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Dog\n",
+    "{\n",
+    "    public abstract void TakeTrail();\n",
+    "\n",
+    "    public void Run()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Побежали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class SearchDog : Dog\n",
+    "{\n",
+    "    public override void TakeTrail()\n",
+    "    {\n",
+    "        Console.WriteLine(\"След взят...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "SearchDog mySearchDog = new SearchDog(); // Создание объекта mySearchDog\n",
+    "\n",
+    "mySearchDog.TakeTrail();\n",
+    "mySearchDog.Run()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -505,8 +798,51 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Двигатель стартовал\n",
+      "Автомобиль двигается\n",
+      "Двигатель остановлен\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");\n",
+    "}\n",
+    "\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine = engine;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "\n",
+    "        // Дополнительная логика для движения автомобиля\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Engine myEngine = new Engine(); // Создание объекта myEngine\n",
+    "Car myAuto = new Car(myEngine); // Создание объекта myAuto\n",
+    "\n",
+    "myAuto.Drive();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -530,8 +866,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Мозг проснулся\n",
+      "Собака бодрствует\n",
+      "Мозг заснул\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Brain\n",
+    "{\n",
+    "    public void WakeUp() => Console.WriteLine(\"Мозг проснулся\");\n",
+    "    public void FallAsleep() => Console.WriteLine(\"Мозг заснул\");\n",
+    "}\n",
+    "\n",
+    "public class Dog\n",
+    "{\n",
+    "    private Brain brain;\n",
+    "\n",
+    "    public Dog(Brain brain)\n",
+    "    {\n",
+    "        this.brain = brain;\n",
+    "    }\n",
+    "\n",
+    "    public void StayAwake()\n",
+    "    {\n",
+    "        brain.WakeUp();\n",
+    "        \n",
+    "        Console.WriteLine(\"Собака бодрствует\");\n",
+    "\n",
+    "        brain.FallAsleep();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Brain myBrain = new Brain(); // Создание объекта myBrain\n",
+    "Dog myDog = new Dog(myBrain); // Создание объекта myAuto\n",
+    "\n",
+    "myDog.StayAwake();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -643,8 +1021,81 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется...\n",
+      "Игорь управляет траспортом...\n",
+      "Автомобиль движется...\n",
+      "Игорь управляет траспортом...\n",
+      "Самолет летит...\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль движется...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Airplane : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Airplane(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Самолет летит...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет траспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Driver Igor = new Driver(\"Игорь\");\n",
+    "    Car myCar = new Car(Igor); // Создаем автомобиль с водителем\n",
+    "    Airplane myAirplane = new Airplane(Igor);\n",
+    "\n",
+    "    myCar.Drive(); // Автомобиль начинает движение\n",
+    "    Igor.Drive(myCar); // Водитель также может начать движение, используя автомобиль\n",
+    "    Igor.Drive(myAirplane)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -659,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -668,8 +1119,81 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака бежит...\n",
+      "Владислав выгуливает питомца...\n",
+      "Собака бежит...\n",
+      "Владислав выгуливает питомца...\n",
+      "Кошка гуляет...\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Walk();\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    private Master master;\n",
+    "\n",
+    "    public Dog(Master master)\n",
+    "    {\n",
+    "        this.master = master;\n",
+    "    }\n",
+    "\n",
+    "    public override void Walk()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака бежит...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "    private Master master;\n",
+    "\n",
+    "    public Cat(Master master)\n",
+    "    {\n",
+    "        this.master = master;\n",
+    "    }\n",
+    "\n",
+    "    public override void Walk()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка гуляет...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Master\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Master(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Walk(Animal animal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} выгуливает питомца...\");\n",
+    "        animal.Walk();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Master Vladislav = new Master(\"Владислав\");\n",
+    "    Dog myDog = new Dog(Vladislav); // Создаем автомобиль с водителем\n",
+    "    Cat myCat = new Cat(Vladislav);\n",
+    "\n",
+    "    myDog.Walk(); // Автомобиль начинает движение\n",
+    "    Vladislav.Walk(myDog); // Водитель также может начать движение, используя автомобиль\n",
+    "    Vladislav.Walk(myCat);"
+   ]
   }
  ],
  "metadata": {
@@ -677,6 +1201,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
