Sprint0_Task3_Done

--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -15,7 +15,8 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 11\n",
+    "\n"
    ]
   },
   {
@@ -26,7 +27,12 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n"
+    "Создать базовый класс Customer в C#, который будет представлять информацию о\n",
+    "клиентах или покупателях. На основе этого класса разработать 2-3 производных\n",
+    "класса, демонстрирующих принципы наследования и полиморфизма. В каждом из\n",
+    "классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n"
    ]
   },
   {
@@ -40,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -49,8 +55,122 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID клиента: 1; имя: Kate; электронная почта: superfeya@gmail.com, баланс лояльности: 25\n",
+      "\n",
+      "ID клиента: 2; имя: Vladislav; электронная почта: industrialStudent@gmail.com\n",
+      "2016.04.05 0:00:00\n",
+      "ID клиента: 2; имя: Vladislav; электронная почта: smesharik2008@gmail.com\n",
+      "13.09.2024 0:00:00\n",
+      "\n",
+      "ID клиента: 3; имя: Andrey; электронная почта: investmentFundOfficial@gmail.com\n",
+      "InvestmentFundCorporation\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Customer \n",
+    "{\n",
+    "    public int CustomerId { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public string Email { get; set; }\n",
+    "\n",
+    "    public Customer (int customerId, string name, string email) \n",
+    "    {\n",
+    "        CustomerId = customerId;\n",
+    "        Name = name;\n",
+    "        Email = email;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetFullName()\n",
+    "    {\n",
+    "        Console.WriteLine(Name);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void UpdateEmail(string newEmail)\n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ViewProfile()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class VipCustomer : Customer\n",
+    "{\n",
+    "    public int LoyaltyPoint { get; set; }\n",
+    "\n",
+    "    public VipCustomer (int customerId, string name, string email, int loyaltyPoint) \n",
+    "    : base(customerId, name, email)\n",
+    "    {\n",
+    "        LoyaltyPoint = loyaltyPoint;\n",
+    "    }\n",
+    "\n",
+    "    public override void ViewProfile()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}, баланс лояльности: {LoyaltyPoint}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class RegularCustomer : Customer \n",
+    "{\n",
+    "    public string RegistrationDate { get; set; }\n",
+    "\n",
+    "    public RegularCustomer (int customerId, string name, string email, string registrationDate) \n",
+    "    : base(customerId, name, email)\n",
+    "    {\n",
+    "        RegistrationDate = registrationDate;\n",
+    "    }\n",
+    "\n",
+    "    public override void UpdateEmail(string newEmail)\n",
+    "    {\n",
+    "        Email = newEmail;\n",
+    "        RegistrationDate = DateTime.Today.ToString();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class GroupCustomer : Customer \n",
+    "{\n",
+    "    public string GroupName { get; set; }\n",
+    "\n",
+    "    public GroupCustomer (int customerId, string name, string email, string groupName) \n",
+    "    : base(customerId, name, email)\n",
+    "    {\n",
+    "        GroupName = groupName;\n",
+    "    }\n",
+    "\n",
+    "    public override void GetFullName()\n",
+    "    {\n",
+    "        Console.WriteLine(GroupName);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "VipCustomer myVipCustomer = new VipCustomer(1, \"Kate\", \"superfeya@gmail.com\", 25);\n",
+    "RegularCustomer myRegCustomer = new RegularCustomer(2, \"Vladislav\", \"industrialStudent@gmail.com\", \"2016.04.05 0:00:00\");\n",
+    "GroupCustomer myGrCustomer = new GroupCustomer(3, \"Andrey\", \"investmentFundOfficial@gmail.com\", \"InvestmentFundCorporation\");\n",
+    "\n",
+    "\n",
+    "myVipCustomer.ViewProfile();  // 1ый клиент\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "myRegCustomer.ViewProfile(); // 2ой клиент\n",
+    "Console.WriteLine(myRegCustomer.RegistrationDate); // дата регистарции 2го клиента\n",
+    "myRegCustomer.UpdateEmail(\"smesharik2008@gmail.com\"); // обновление почты\n",
+    "myRegCustomer.ViewProfile(); // профиль с обновленной почтой\n",
+    "Console.WriteLine(myRegCustomer.RegistrationDate); // дата изменилась в соответствии с последним измененим почты\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "myGrCustomer.ViewProfile(); // 3ий клиент\n",
+    "myGrCustomer.GetFullName(); // По ТЗ метод GetFullName вместо имени клиента возвращет название группы"
+   ]
   }
  ],
  "metadata": {
@@ -58,6 +178,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
