Sprint0_Task3_Fix

--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -65,7 +65,7 @@
       "ID клиента: 2; имя: Vladislav; электронная почта: industrialStudent@gmail.com\n",
       "2016.04.05 0:00:00\n",
       "ID клиента: 2; имя: Vladislav; электронная почта: smesharik2008@gmail.com\n",
-      "13.09.2024 0:00:00\n",
+      "14.09.2024 0:00:00\n",
       "\n",
       "ID клиента: 3; имя: Andrey; электронная почта: investmentFundOfficial@gmail.com\n",
       "InvestmentFundCorporation\n"
@@ -75,11 +75,11 @@
    "source": [
     "public class Customer \n",
     "{\n",
-    "    public int CustomerId { get; set; }\n",
+    "    public int CustomerId { get; set; }  // Атрибуты класса\n",
     "    public string Name { get; set; }\n",
     "    public string Email { get; set; }\n",
     "\n",
-    "    public Customer (int customerId, string name, string email) \n",
+    "    public Customer (int customerId, string name, string email) // Конструктор\n",
     "    {\n",
     "        CustomerId = customerId;\n",
     "        Name = name;\n",
@@ -132,6 +132,11 @@
     "    public override void UpdateEmail(string newEmail)\n",
     "    {\n",
     "        Email = newEmail;\n",
+    "        UpdateRegistrationDate();\n",
+    "    }\n",
+    "\n",
+    "    private void UpdateRegistrationDate()\n",
+    "    {\n",
     "        RegistrationDate = DateTime.Today.ToString();\n",
     "    }\n",
     "}\n",
