Sprint0_Task3_AfterReview

--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -60,7 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID клиента: 1; имя: Kate; электронная почта: superfeya@gmail.com, баланс лояльности: 25\n",
+      "ID клиента: 1; имя: Kate; электронная почта: superfeya@gmail.com\n",
+      "баланс лояльности: 25\n",
       "\n",
       "ID клиента: 2; имя: Vladislav; электронная почта: industrialStudent@gmail.com\n",
       "2016.04.05 0:00:00\n",
@@ -75,9 +76,9 @@
    "source": [
     "public class Customer \n",
     "{\n",
-    "    public int CustomerId { get; set; }  // Атрибуты класса\n",
-    "    public string Name { get; set; }\n",
-    "    public string Email { get; set; }\n",
+    "    public int CustomerId;  // Атрибуты класса\n",
+    "    public string Name;\n",
+    "    public string Email;\n",
     "\n",
     "    public Customer (int customerId, string name, string email) // Конструктор\n",
     "    {\n",
@@ -105,7 +106,7 @@
     "\n",
     "public class VipCustomer : Customer\n",
     "{\n",
-    "    public int LoyaltyPoint { get; set; }\n",
+    "    public int LoyaltyPoint;\n",
     "\n",
     "    public VipCustomer (int customerId, string name, string email, int loyaltyPoint) \n",
     "    : base(customerId, name, email)\n",
@@ -115,13 +116,14 @@
     "\n",
     "    public override void ViewProfile()\n",
     "    {\n",
-    "        Console.WriteLine($\"ID клиента: {CustomerId}; имя: {Name}; электронная почта: {Email}, баланс лояльности: {LoyaltyPoint}\");\n",
+    "        base.ViewProfile();\n",
+    "        Console.WriteLine($\"баланс лояльности: {LoyaltyPoint}\");\n",
     "    }\n",
     "}\n",
     "\n",
     "public class RegularCustomer : Customer \n",
     "{\n",
-    "    public string RegistrationDate { get; set; }\n",
+    "    public string RegistrationDate;\n",
     "\n",
     "    public RegularCustomer (int customerId, string name, string email, string registrationDate) \n",
     "    : base(customerId, name, email)\n",
@@ -144,8 +146,8 @@
     "\n",
     "public class GroupCustomer : Customer \n",
     "{\n",
-    "    public string GroupName { get; set; }\n",
-    "\n",
+    "    public string GroupName;\n",
+    "    \n",
     "    public GroupCustomer (int customerId, string name, string email, string groupName) \n",
     "    : base(customerId, name, email)\n",
     "    {\n",
