--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -209,8 +209,30 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public static int TotalVehicles { get; private set; }\n",
+    "\n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle vehicle1 = new Vehicle();\n",
+    "Vehicle vehicle2 = new Vehicle();\n",
+    "Console.WriteLine(Vehicle.TotalVehicles);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -234,8 +256,116 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Птичка летит...\n",
+      "Собака лает...\n",
+      "Собака взяла след...\n",
+      "2\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    // Атрибуты класса\n",
+    "    protected int MaxSpeed { get; set; }\n",
+    "    public static int TotalAnimals { get; private set; }\n",
+    "    \n",
+    "    // Методы класса\n",
+    "    public Animal()\n",
+    "    { \n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    protected virtual void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine(\"MaxSpeed\");\n",
+    "    }\n",
+    "\n",
+    "    public void InscreaseMaxSpeed(int speed)\n",
+    "    {\n",
+    "        MaxSpeed += speed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IDog\n",
+    "{\n",
+    "    void Bark();\n",
+    "    void TakeTrail();\n",
+    "}\n",
+    "\n",
+    "public class Dog :  Animal, IDog\n",
+    "{\n",
+    "    private string Skin;\n",
+    "    public static int TotalDogs { get; private set; }\n",
+    "\n",
+    "    protected override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine(Skin);\n",
+    "    }\n",
+    "\n",
+    "    public Dog(string skin) : base()\n",
+    "    {\n",
+    "        Skin = skin;\n",
+    "        TotalDogs++;\n",
+    "    }\n",
+    "\n",
+    "    public void Bark()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака лает...\");\n",
+    "    }\n",
+    "\n",
+    "    public void TakeTrail()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака взяла след...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IBird\n",
+    "{\n",
+    "    void Fly();\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal, IBird\n",
+    "{\n",
+    "    private string Color;\n",
+    "    public static int TotalBirds { get; private set; }\n",
+    "\n",
+    "    protected override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine(Color);\n",
+    "    }\n",
+    "\n",
+    "    public Bird(string color) : base()\n",
+    "    {\n",
+    "        Color = color;\n",
+    "        TotalBirds++;\n",
+    "    }\n",
+    "\n",
+    "    public void Fly()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Птичка летит...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog Buddy = new Dog(\"Brown\");\n",
+    "Bird Floppy = new Bird(\"Blue\");\n",
+    "Floppy.Fly();\n",
+    "Buddy.Bark();\n",
+    "Buddy.TakeTrail();\n",
+    "\n",
+    "Console.WriteLine(Animal.TotalAnimals);\n",
+    "Console.WriteLine(Dog.TotalDogs);\n",
+    "Console.WriteLine(Dog.TotalAnimals);"
+   ]
   }
  ],
  "metadata": {
@@ -243,6 +373,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
