--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -136,8 +136,97 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.ArgumentOutOfRangeException: Specified argument was out of the range of valid values. (Parameter 'Скорость не может быть отрицательной!')\r\n   at Submission#34.Vehicle.set_Speed(Int32 value)\r\n   at Submission#34.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.ArgumentOutOfRangeException: Specified argument was out of the range of valid values. (Parameter 'Скорость не может быть отрицательной!')\r\n",
+      "   at Submission#34.Vehicle.set_Speed(Int32 value)\r\n",
+      "   at Submission#34.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    private string _color;\n",
+    "    private int _speed;\n",
+    "\n",
+    "    // Свойство Color с геттером и сеттером\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return _color; }\n",
+    "        set { _color = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Свойство Speed с геттером и сеттером\n",
+    "    public int Speed\n",
+    "    {\n",
+    "        get { return _speed; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _speed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Скорость не может быть отрицательной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalVehicles { get; private set; } = 0;\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Accelerate(int delta)\n",
+    "    {\n",
+    "        Speed += delta;\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalVehicles()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int _fuelLevel;\n",
+    "\n",
+    "    // Свойство FuelLevel с геттером и сеттером\n",
+    "    public int FuelLevel\n",
+    "    {\n",
+    "        get { return _fuelLevel; }\n",
+    "        set { _fuelLevel = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "        FuelLevel = 100; // Задаем начальный уровень топлива\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        FuelLevel += amount;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myCar = new Vehicle();\n",
+    "myCar.Color = \"Red\";\n",
+    "myCar.Speed = -2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -161,8 +250,188 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Всего животных: 1\n",
+      "Иди ловить мышей\n",
+      "Кот поймал мышей: 2\n",
+      "Животное тренируется...\n",
+      "Собака лает...\n",
+      "Собака взяла след...\n",
+      "Максимальная скорость Мурзика: 20\n",
+      "Кошка тренируется...\n",
+      "Новая максимальная скорость Мурзика: 35\n",
+      "Всего котов: 1\n",
+      "Всего животных: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private string _skin;\n",
+    "    private int _maxSpeed;\n",
+    "    \n",
+    "    // Свойство Color с геттером и сеттером\n",
+    "    public string Skin\n",
+    "    {\n",
+    "        get { return _skin; }\n",
+    "        set { _skin = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Свойство MaxSpeed с геттером и сеттером\n",
+    "    public int MaxSpeed\n",
+    "    {\n",
+    "        get { return _maxSpeed; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                _maxSpeed = value;\n",
+    "            else\n",
+    "                Console.WriteLine(\"Скорость не может быть меньше или равной нулю.\");\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    // Статический атрибут\n",
+    "    public static int TotalAnimals { get; private set; } = 0;\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Animal()\n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод для переопрделения в будущих классах\n",
+    "    public virtual void Train(int delta)\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное тренируется...\");\n",
+    "        MaxSpeed += delta;\n",
+    "    }\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalAnimals()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalAnimals}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IDog\n",
+    "{\n",
+    "    void Bark();\n",
+    "    void TakeTrail();\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IDog\n",
+    "{\n",
+    "    private int _energyLevel;\n",
+    "\n",
+    "    // Свойство EnergyLevel с геттером и сеттером\n",
+    "    public int EnergyLevel\n",
+    "    {\n",
+    "        get { return _energyLevel; }\n",
+    "        set { _energyLevel = value;}\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalDogs { get; private set; }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Dog() : base()\n",
+    "    {\n",
+    "        EnergyLevel = 100;\n",
+    "        TotalDogs++;\n",
+    "    }\n",
+    "\n",
+    "    // Обычные методы\n",
+    "    public void Bark()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака лает...\");\n",
+    "    }\n",
+    "\n",
+    "    public void TakeTrail()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака взяла след...\");\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalDogs()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalDogs}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface ICat\n",
+    "{\n",
+    "    void Meow();\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal, ICat\n",
+    "{\n",
+    "    private int _caughtMiseCount;\n",
+    "\n",
+    "    // Свойство CaughtMiseCount с геттером и сеттером\n",
+    "    public int CaughtMiseCount \n",
+    "    {\n",
+    "        get { return _caughtMiseCount; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                _caughtMiseCount = value;\n",
+    "            else\n",
+    "                Console.WriteLine(\"Иди ловить мышей\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalCats { get; private set; }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Cat(int caughtMiseCount) : base()\n",
+    "    {\n",
+    "        CaughtMiseCount = caughtMiseCount;\n",
+    "        TotalCats++;\n",
+    "    }\n",
+    "\n",
+    "    public override void Train(int delta)\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка тренируется...\");\n",
+    "        MaxSpeed += delta;\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Meow()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мяу!\");\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalCats()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalCats}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog Buddy = new Dog();\n",
+    "Console.WriteLine($\"Всего животных: {Animal.TotalAnimals}\");\n",
+    "Cat Murzik = new Cat(0);\n",
+    "Murzik.CaughtMiseCount = 2;\n",
+    "Console.WriteLine($\"Кот поймал мышей: {Murzik.CaughtMiseCount}\");\n",
+    "Animal myAnimal = new Animal();\n",
+    "myAnimal.Train(10);\n",
+    "\n",
+    "Buddy.Bark();\n",
+    "Buddy.TakeTrail();\n",
+    "Murzik.MaxSpeed = 20;\n",
+    "Console.WriteLine($\"Максимальная скорость Мурзика: {Murzik.MaxSpeed}\");\n",
+    "Murzik.Train(15);\n",
+    "Console.WriteLine($\"Новая максимальная скорость Мурзика: {Murzik.MaxSpeed}\");\n",
+    "\n",
+    "\n",
+    "Console.WriteLine($\"Всего котов: {Cat.TotalCats}\");\n",
+    "Console.WriteLine($\"Всего животных: {Dog.TotalAnimals}\");"
+   ]
   }
  ],
  "metadata": {
@@ -170,6 +439,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
