--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -110,8 +110,55 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Превышен скоростной режим!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Color { get; set; } // public свойство\n",
+    "    protected int speed; // private поле\n",
+    "\n",
+    "    protected void SetSpeed(int value) // protected метод\n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int fuelLevel; // private поле\n",
+    "\n",
+    "    public void Refuel(int amount) // public метод\n",
+    "    {\n",
+    "        fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    public new void SetSpeed(int value)\n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckSpeedLimit() // protected метод\n",
+    "    {\n",
+    "        if (speed > 120)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car civic = new Car();\n",
+    "civic.Color = \"Red\";\n",
+    "civic.SetSpeed(130);\n",
+    "civic.CheckSpeedLimit();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +182,103 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Птичка играет и веселится\n",
+      "Птичка играет и веселится\n",
+      "Floppy\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private string _name;\n",
+    "    \n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    public static int TotalAnimals { get; private set; } = 0;\n",
+    "\n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Play()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное играет и веселится\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird: Animal\n",
+    "{\n",
+    "    private string _color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return _color; }\n",
+    "        set { _color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Bird (string name, string color) : base(name)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public override void Play()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Птичка играет и веселится\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Master\n",
+    "{\n",
+    "    private string _name;\n",
+    "    public Animal myAnimal { get; set; }\n",
+    "\n",
+    "    public string Name \n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    public Master(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "    \n",
+    "\n",
+    "    public void PlayWithBird()\n",
+    "    {\n",
+    "        if (myAnimal != null)\n",
+    "        {\n",
+    "            myAnimal.Play();\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"{Name} не имеет питомца\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Bird Floppy = new Bird(\"Floppy\", \"Blue\"); // Создать экземпляр класса Bird с заданными свойствами (имя: Floppy, окрас: Blue). \n",
+    "Master Van = new Master(\"Van\"); // Создать экземпляр класса Master с заданными свойствами (имя: Van). \n",
+    "Van.myAnimal = Floppy; // Добавить к объекту Van в поле myAnimal экземпляр класса Animal - Floppy.\n",
+    "\n",
+    "\n",
+    "Van.PlayWithBird(); // Вызвать функцию из класса Animal через экземпляр класса Master и функцию PlayWithBird в нём.\n",
+    "Floppy.Play(); // Вызвать функцию из класса Animal через экземпляр класса Bird.\n",
+    "Console.WriteLine(Van.myAnimal.Name) // Получить свойство экземпляра класса Animal через экземпляр класса Master."
+   ]
   }
  ],
  "metadata": {
@@ -144,6 +286,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
